# podshipnick-number-1

./: CMakeLists.txt  README.md  main  task1_image  task1_image.cpp  task2_webcam  task2_webcam.cpp  task3_webcam  task3_webcam.cpp  task4_webcam  task4_webcam.cpp  task5_webcam  task5_webcam.cpp  task6_webcam  task6_webcam.cpp
